Minor improvements on code readability